[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Test.gd" type="Script" id=1]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Click" type="Button" parent="."]
margin_left = 565.0
margin_top = 324.0
margin_right = 765.0
margin_bottom = 434.0
rect_min_size = Vector2( 200, 110 )
custom_fonts/font = SubResource( 1 )
text = "Click Me"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scorelabel" type="Label" parent="Click"]
anchor_left = 0.5
anchor_top = -0.927
anchor_right = 0.5
anchor_bottom = -0.927
margin_left = -79.0
margin_top = -16.03
margin_right = 81.0
margin_bottom = 16.97
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goback" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.043
anchor_right = 0.05
anchor_bottom = 0.043
margin_left = -51.3
margin_top = -15.024
margin_right = 48.7
margin_bottom = 13.976
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 665, 375 )
z_index = -1
emitting = false
amount = 500
lifetime = 13.91
speed_scale = 5.0
explosiveness = 0.7
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 50 )
initial_velocity = 387.09
initial_velocity_random = 0.7
linear_accel = 8.6
damping = 59.68
damping_random = 0.33
angle = 720.0
angle_random = 0.7
scale_amount = 10.0
scale_amount_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Submit" type="Button" parent="."]
margin_left = 1146.0
margin_top = 720.0
margin_right = 1350.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 4 )
text = "Submit Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Process" type="Label" parent="."]
visible = false
margin_left = 442.0
margin_top = 468.0
margin_right = 897.0
margin_bottom = 626.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[connection signal="pressed" from="Click" to="." method="_on_Click_pressed"]
[connection signal="pressed" from="Goback" to="." method="_on_Goback_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
